--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.0",
+    "ag-grid-angular": "^31.1.1",
+    "ag-grid-community": "^31.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
