--- a/backend/gateway/pom.xml
+++ b/backend/gateway/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.rsvp</groupId>
-	<artifactId>api-gateway</artifactId>
+	<artifactId>gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>api-gateway</name>
-	<description>Api gateway for RSVP</description>
+	<name>gateway</name>
+	<description>Api Gateway for RSVP</description>
 	<properties>
 		<java.version>21</java.version>
 		<spring-cloud.version>2023.0.1</spring-cloud.version>
